--- a/cluster_profile/builds.yaml
+++ b/cluster_profile/builds.yaml
@@ -16,7 +16,7 @@ use_nextalign: true
 inputs:
   - name: gisaid
     metadata: "s3://nextstrain-ncov-private/metadata.tsv.gz"
-    # sequences: "s3://nextstrain-ncov-private/sequences.fasta.gz"
+    sequences: "s3://nextstrain-ncov-private/sequences.fasta.gz"
     # ---------------------- NOTE --------------------------
     # PR 550 changed the path of intermediate files on
     # the S3 bucket to include the origin (e.g. _gisaid).
