--- a/cluster_profile/builds.yaml
+++ b/cluster_profile/builds.yaml
@@ -15,7 +15,8 @@ use_nextalign: true
 # subsampling
 inputs:
   - name: gisaid
-    metadata: "s3://nextstrain-ncov-private/metadata.tsv.gz"
+    #metadata: "s3://nextstrain-ncov-private/metadata.tsv.gz"
+    metadata: "data/metadata.tsv"
     sequences: "s3://nextstrain-ncov-private/sequences.fasta.gz"
     # ---------------------- NOTE --------------------------
     # PR 550 changed the path of intermediate files on
@@ -29,7 +30,8 @@ inputs:
     # masked: "s3://nextstrain-ncov-private/masked_gisaid.fasta.fasta.xz"
     # mutation_summary: "s3://nextstrain-ncov-private/mutation_summary_gisaid.tsv.xz"
     # sequence-diagnostic: "s3://nextstrain-ncov-private/sequence-diagnostics_gisaid.tsv.xz"
-    filtered: "s3://nextstrain-ncov-private/filtered_gisaid.fasta.xz"
+    #filtered: "s3://nextstrain-ncov-private/filtered_gisaid.fasta.xz"
+    filtered: "results/filtered_gisaid.fasta.xz"
 
 
 # Define locations for which builds should be created.
