--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -88,7 +88,7 @@ mask:
 
   # Specific sites to mask in the reference genome's coordinates.
   # These are 1-indexed coordinates of sites that have been identified as prone to sequencing errors.
-  mask_sites: "21987"
+  mask_sites: "21987 15521"
 
 # Depending on how you define focal and contextual inputs, the same strains may
 # appear in both inputs. This option tells the workflow not to throw an error
