--- a/cluster_profile/auspice_config_cluster.json
+++ b/cluster_profile/auspice_config_cluster.json
@@ -114,7 +114,7 @@
   "display_defaults": {
     "color_by": "clade_membership",
     "distance_measure": "num_date",
-    "geo_resolution": "division",
+    "geo_resolution": "country",
     "map_triplicate": true,
     "branch_label": "clade",
     "transmission_lines": false
