--- a/cluster_profile/config.yaml
+++ b/cluster_profile/config.yaml
@@ -28,7 +28,7 @@ jobs: 128
 jobscript: nextstrain_profiles/nextstrain-scicore/submit.sh
 
 # Set the name for the job as display in the cluster queue.
-jobname: "{rulename}.{jobid}.sh"
+jobname: "cov.{rulename}.{jobid}.sh"
 
 # Set the number of threads (cores, actually) that the tree rule or other rules
 # should use on the cluster. These settings override the hardcoded values in the
